Fix Radio label vertical alignment on Ethics review form

--- a/apps/dynforms/static/dynforms/dynforms.scss
+++ b/apps/dynforms/static/dynforms/dynforms.scss
@@ -489,7 +489,7 @@ div {
 		}
 		&:first-child {
 			color: $color_4;
-			line-height: 1;
+			line-height: 1.6;
 		}
 		font-weight: 600;
 		color: $color_6;
